fix result detail image wrong margin

--- a/searx/static/themes/simple/src/less/detail.less
+++ b/searx/static/themes/simple/src/less/detail.less
@@ -105,7 +105,6 @@ article.result-images .detail {
     .result-detail{
       background-color: var(--color-search-background);
       display: flex;
-      max-width: calc(100% - 5rem);
       flex-direction: column;
       justify-content: space-evenly;
       .rounded-corners;
